Api Studiantes funcional